@@ -888,6 +888,21 @@ var CloudCommander, Util, DOM, CloudFunc;
         return lRet; 
     };
     
+       /**
+     * get link from current (or param) file
+     * 
+     * @param pCurrentFile - current file by default
+     */
+    DOM.getCurrentPath          = function(pCurrentFile){
+        var lCurrent    = pCurrentFile || DOM.getCurrentFile(),
+            lPath       = DOM.getCurrentLink(lCurrent).href;
+            /* убираем адрес хоста*/
+            lPath = Util.removeStr(lPath, CloudCommander.HOST);
+            lPath = Util.removeStr(lPath, CloudFunc.NOJS);
+        
+        return lPath; 
+    };
+    
     /**
      * get name from current (or param) file
      * 
