@@ -123,28 +123,20 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
         
         /* getting link */
         var lCurrentFile = DOM.getCurrentFile(),
-            lA = DOM.getCurrentLink(lCurrentFile);
-            lA = lA.href;
-                    
-        /* убираем адрес хоста*/
-        lA = Util.removeStr(lA, cloudcmd.HOST);
+            lPath = DOM.getCurrentPath(lCurrentFile);
         
         /* checking is this link is to directory */
         var lSize = DOM.getByClass('size', lCurrentFile);
         if(lSize){
             lSize = lSize[0].textContent;
             
-            /* if directory - load json
-             * not html data
+            /* when folder view 
+             * is no need to edit
+             * data
              */
-            if (lSize === '<dir>'){
-                lA = Util.removeStr(lA, CloudFunc.NOJS);
-                /* when folder view 
-                 * is no need to edit
-                 * data
-                 */
-                ReadOnly = true;
-            }
+            if (lSize === '<dir>')
+                ReadOnly = true;                
+                
         }
         
         Loading = true;
@@ -155,7 +147,7 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
             
         /* reading data from current file */
         DOM.ajax({
-            url:lA,
+            url:lPath,
              error: function(jqXHR, textStatus, errorThrown){
                  Loading = false;
                  return DOM.Images.showError(jqXHR);
